Release Candidate 1
===================

- Returned to the default lazy false behavior.

- Will automatically initialize entities when loading outside of scope.

- Removed IModelNode since it was no longer of any value.

- Added XML Documentation to all public/ protected methods

- Moved to using NHibernate 1.2 beta 1
  IEntityPersister instead of IClassPersister
  I had some issues with Nullables.dll support, but mainly because the hard coded version number.
  Different DB Tests failed because of the way NHibernate changed transaction handling (more thorough cleansing of them), I manually saved the transaction executed, and they tests pass now.
  
  I added type guessing to ISet<> (set), IList<> (bag), ICollection<> (bag), IDictionary<>(map)
  
  The nicest new feature IMO is this:
  
  ProjectionQuery<Blog, int> proj = new ProjectionQuery<Blog, int>(Projections.RowCount());
  int rowCount = proj.Execute();
  Assert.AreEqual(1, rowCount);

- Refactored: CompositeKey is not a class level attribute anymore
  (minor breaking change)

  Instead of

    [PrimaryKey]
    public SomeClass Id { get/set }
    
  You must use

    [CompositeKey]
    public SomeClass Id { get/set }
  

- Added support for queries using the SQL language instead of HQL, 
  on classes derived from HqlBasedQuery (SimpleQuery, ScalarQuery, etc).

- Added ActiveRecordModel.GetModels(), which returns an array containing every registered ActiveRecordModel.

- Fixed AR-53
  "Unique key on multiple columns"

  Introduced UniqueKey on PropertyAttribute and FieldAttribute
  
- Introduced the following properties on PropertyAttribute and FieldAttribute:

  - Index
  - SqlType
  - Check

- Fixed AR-78 
  "Allow users to specify autoImport"
  
  Use the property UseAutoImport on ActiveRecordAttribute to control auto-import

- Resynched ActiveRecordAttribute with NHibernate <class> mapping. Added:

  - SelectBeforeUpdate
  - Polymorphism
  - Mutable
  - BatchSize
  - Locking

- Fixed AR-31